--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Malla Obstetricia</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <h1>Malla Interactiva - Obstetricia</h1>
+  <div id="grid-container"></div>
+  <div id="summary">
+    Créditos aprobados: <span id="approvedCredits">0</span> SCT (
+    <span id="percentageCredits">0</span>%)
+  </div>
+  <script src="script.js"></script>
+</body>
+</html>
